Fix spacing

--- a/assets/blocks/learner-courses-block/learner-courses.scss
+++ b/assets/blocks/learner-courses-block/learner-courses.scss
@@ -194,6 +194,7 @@ $courses-list: '#{$block}__courses-list';
 	align-items: center;
 	justify-content: flex-end;
 	margin-right: -12px;
+	flex-wrap: wrap;
 
 	&, .entry-content & {
 		* {
